fixed header image and text overlapping faces problems. Lots of tweaking.

--- a/css/main.css
+++ b/css/main.css
@@ -717,40 +717,44 @@ header ul li a {
   .page-header {height: 300px;}}
 
 
+
+
 /*this don't seem right*/
 .page-header h1 {margin-top: 8%;}
-
 
 @media (max-width: 1790px) {
 .page-header h1  {
     margin-top: 5%;
-    width: 39%;}
+    width: 40%;
+  }
 }
-
 
 @media (max-width: 1330px) {
 .page-header h1 {
-    margin-top: 280px;
-    width: 100%;}
+    margin-top: 220px;
+    width: 100%;
+  }
 }
-
-@media (max-width: 848px) {
-.page-header h1 {
-    margin-top: 190px;
-    width: 100%;}
-}
-
 
 @media (max-width: 768px) {
 .page-header h1 {
-    margin-top: 150px;
-    width: 100%;}
+    margin-top: 260px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+.page-header h1 {
+    margin-top: 134px;
+    width: 100%;
+  }
 }
 
 @media (max-width: 508px) {
 .page-header h1 {
-    margin-top: 120px;
-    width: 100%;}
+    margin-top: 134px;
+    width: 100%;
+  }
 }
 
 
@@ -758,11 +762,44 @@ header ul li a {
 
 
 
-#about-header {background-image: url(bgs/header-image-about.jpg);
-background-position: right top;}
-#owners-header {background-image: url(bgs/header-image-owners.jpg);}
-#tenants-header {background-image: url(bgs/header-image-tenants.jpg);}
-#contact-header {background-image: url(bgs/header-image-contact.jpg);}
+#about-header {
+  background-image: url(bgs/header-image-about.jpg);
+  background-position: right top;
+}
+
+@media (max-width: 970px) {
+  #about-header {background-image: url(bgs/header-image-about-mobile.jpg);
+  background-position: center;}
+}
+
+@media (max-width: 768px) {
+  #about-header {background-image: url(bgs/header-image-about-mobile.jpg);
+  background-position: center -20px;}
+}
+
+@media (max-width: 590px) {
+  #about-header {background-image: url(bgs/header-image-about-mobile.jpg);
+  background-position: center center;}
+}
+
+
+#owners-header {
+  background-image: url(bgs/header-image-owners.jpg);
+}
+
+
+#tenants-header {
+  background-image: url(bgs/header-image-tenants.jpg);
+}
+
+
+#contact-header {
+  background-image: url(bgs/header-image-contact.jpg);
+  background-position: center right;
+}
+
+
+
 
 .intro-block p {
   margin-bottom: 0;
